tests/ui/lint/snapshots/internal_type_leak.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Private type `PrivateData` in public API
   ╭─[test.lis:6:28]
 5 │ 
 6 │ pub fn leaky_function() -> PrivateData {
   ·                            ─────┬─────
   ·                                 ╰── exposed by `leaky_function`
 7 │   PrivateData { _value: 42 }
   ╰────
  help: `PrivateData` is private but exposed by `leaky_function`, which is public. Add `pub` to the private type or remove it from the public API · code: [lint.internal_type_leak]
