tests/ui/lint/snapshots/internal_type_leak_in_tuple_return.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Private type `PrivateA` in public API
    ╭─[test.lis:10:23]
  9 │ 
 10 │ pub fn get_pair() -> (PrivateA, PrivateB) {
    ·                       ────┬───
    ·                           ╰── exposed by `get_pair`
 11 │   (PrivateA { _a: 1 }, PrivateB { _b: 2 })
    ╰────
  help: `PrivateA` is private but exposed by `get_pair`, which is public. Add `pub` to the private type or remove it from the public API · code: [lint.internal_type_leak]
