tests/ui/lint/snapshots/invisible_in_string_byte_order_mark.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Invisible character in string
   ╭─[test.lis:3:11]
 2 │ fn main() {
 3 │   let _ = "﻿leading"
   ·           ────┬────
   ·               ╰── contains U+FEFF (zero-width no-break space)
 4 │ }
   ╰────
  help: Invisible characters in strings can hide bugs and silently shift meaning. Remove the character, or replace it with the visible character you meant · code: [lint.invisible_in_string]
