tests/ui/lint/snapshots/invisible_in_string_no_break_space.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Invisible character in string
   ╭─[test.lis:3:11]
 2 │ fn main() {
 3 │   let _ = "foo bar"
   ·           ────┬────
   ·               ╰── contains U+00A0 (no-break space)
 4 │ }
   ╰────
  help: Invisible characters in strings can hide bugs and silently shift meaning. Remove the character, or replace it with the visible character you meant · code: [lint.invisible_in_string]
