tests/ui/lint/snapshots/invisible_in_string_pattern.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Invisible character in string
   ╭─[test.lis:5:5]
 4 │   let _ = match s {
 5 │     "foo​" => 1,
   ·     ──┬──
   ·       ╰── contains U+200B (zero-width space)
 6 │     _ => 0,
   ╰────
  help: Invisible characters in strings can hide bugs and silently shift meaning. Remove the character, or replace it with the visible character you meant · code: [lint.invisible_in_string]
