tests/ui/lint/snapshots/irrefutable_if_let_identifier.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant `if let` pattern
   ╭─[test.lis:3:10]
 2 │ pub fn test(x: int) {
 3 │   if let y = x {
   ·          ┬
   ·          ╰── always matches
 4 │     let _ = y;
   ╰────
  help: Use `let` instead of `if let` since the pattern cannot fail · code: [lint.redundant_if_let]
