tests/ui/lint/snapshots/irrefutable_if_let_struct.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant `if let` pattern
   ╭─[test.lis:5:10]
 4 │ pub fn test(p: Point) {
 5 │   if let Point { x, y } = p {
   ·          ───────┬──────
   ·                 ╰── always matches
 6 │     let _ = x + y;
   ╰────
  help: Use `let` instead of `if let` since the pattern cannot fail · code: [lint.redundant_if_let]
